--- a/WEgudok/package.json
+++ b/WEgudok/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@capacitor/core": "2.4.7",
     "@ionic-native/calendar": "^5.32.1",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^3.0.4",
+    "@ionic/storage-angular": "^3.0.6",
     "chart.js": "^2.9.3",
     "cordova-plugin-calendar": "^5.1.5",
     "ion2-calendar": "^3.0.0-rc.0",
