--- a/WEgudok/package.json
+++ b/WEgudok/package.json
@@ -25,6 +25,7 @@
     "@ionic/angular": "^5.5.2",
     "@ionic/storage": "^3.0.4",
     "@ionic/storage-angular": "^3.0.6",
+    "angular2-text-mask": "^4.1.0",
     "chart.js": "^2.9.3",
     "cordova-plugin-calendar": "^5.1.5",
     "ion2-calendar": "^3.0.0-rc.0",
