--- a/WEgudok/package.json
+++ b/WEgudok/package.json
@@ -21,8 +21,10 @@
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.7",
     "@ionic-native/calendar": "^5.32.1",
+    "@ionic-native/http": "^5.32.1",
     "@ionic/angular": "^5.5.2",
     "chart.js": "^2.9.3",
+    "cordova-plugin-advanced-http": "^3.1.0",
     "cordova-plugin-calendar": "^5.1.5",
     "ion2-calendar": "^3.0.0-rc.0",
     "moment": "^2.29.1",
